--- a/index.html
+++ b/index.html
@@ -73,48 +73,30 @@
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active car-img">
-                    <img src="./assets/background.jpeg" class="d-block w-100" alt="...">
+                    <img src="./assets/sd1-paper.png" class="d-block w-100 overlay" alt="...">
                     <div class="carousel-caption">
                       <h5>EEL 4914 Documentation</h5>
                       <p>The initial documentation for Holomon.</p>
-                      <button type="button" class="btn btn-primary btn-lg">Download</button>
+                      <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/SD1-HoloMon-Report.pdf')">Download</button>
                     </div>
                   </div>
                   <div class="carousel-item car-img">
-                    <img src="./assets/background.jpeg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption ">
-                      <h5>CRD</h5>
-                      <p>The CRD from EEL 4915.</p>
-                      <button type="button" class="btn btn-primary btn-lg">Download</button>
-                    </div>
-                  </div>
-                  <div class="carousel-item car-img">
-                    <img src="./assets/background.jpeg" class="d-block w-100" alt="...">
+                    <img src="./assets/conf-paper.png" class="d-block w-100 overlay" alt="...">
                     <div class="carousel-caption">
                       <h5>Conference Paper</h5>
                       <p>Holomon's conference paper.</p>
-                      <button type="button" class="btn btn-primary btn-lg">Download</button>
+                      <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/8-page.pdf')">Download</button>
                     </div>
                   </div>
                   <div class="carousel-item car-img">
-                    <img src="./assets/background.jpeg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                      <h5>Final Presenation</h5>
-                      <p>Holomon's final presentation to committee.</p>
-                      <button type="button" class="btn btn-primary btn-lg">Download</button>
-                    </div>
-                  </div>
-                  <div class="carousel-item car-img">
-                    <img src="./assets/background.jpeg" class="d-block w-100" alt="...">
+                    <img src="./assets/final_paper.png" class="d-block w-100 overlay" alt="...">
                     <div class="carousel-caption">
                       <h5>Final Documentation</h5>
                       <p>Holomon's final documentation.</p>
-                      <button type="button" class="btn btn-primary btn-lg">Download</button>
+                      <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/SD2_HoloMon_Report-1.pdf')">Download</button>
                     </div>
                   </div>
                 </div>
