--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <!-- doc caro -->
-    <div id="car">
+    <div class="gray-bg">
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="title">DOCUMENTS</h2>
@@ -118,10 +118,29 @@
                 <h2 class="title">BLOCK DIAGRAM</h2>
             </div>
             <div class="d-flex justify-content-center flex-column block-wrapper">
-                <img id="block-diag" src="./assets/block.png" alt="block-diagram">
-                <p class="about">
-                    This is how data flows through holomon.
-                </p>
+                <img id="block-diag" src="./assets/block.png" alt="block-diagram" class="about">
+            </div>
+        </div>
+    </div>
+
+    <div class="gray-bg">
+        <div class="container">
+            <div class="title-wrapper">
+                <h2 class="title">Final Video</h2>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/OhRBL7yTwZ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <div class="container">
+            <div class="title-wrapper">
+                <h2 class="title">CDR Video</h2>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y2m6FEsdugs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
