--- a/index.html
+++ b/index.html
@@ -134,13 +134,74 @@
         </div>
     </div>
 
-    <div>
+    <div class="cdr-vid">
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="title">CDR Video</h2>
             </div>
             <div class="video-container">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Y2m6FEsdugs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
+    <div class="gray-bg">
+        <div class="container">
+            <div class="title-wrapper">
+                <h2 class="title">The Team</h2>
+            </div>
+            <div class="card-container">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/nathan.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nathaniel Kissoon</h5>
+                      <p class="card-text">Nathaniel Kissoon is a 23 year-old
+                        Computer Engineering student
+                        aspiring to work with web
+                        development. He aspires to surpass
+                        Elon Musk as the richest man in the
+                        world.</p>
+                      <a href="#" class="btn btn-primary">Contact</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/liz.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Elizabeth Mikulas</h5>
+                      <p class="card-text">Elizabeth Mikulas is a 23 year-old
+                        Electrical Engineering student who is
+                        taking on a job with L3Harris. She
+                        loves working with anything
+                        electronics and power.</p>
+                        <br/>
+                      <a href="https://www.linkedin.com/in/elizabeth-mikulas-5139791aa/" class="btn btn-primary">Contact</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/DiegoLinkedIn-08.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Diego Rodrigues</h5>
+                      <p class="card-text">Diego Rodrigues is a 26 year-old
+                        Computer Engineering student who is
+                        taking on a job with Microsoft. He
+                        aspires to be an inch taller.</p>
+                        <br/>
+                      <a href="https://www.linkedin.com/in/rodrigues-diego/" class="btn btn-primary">Contact</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/taniya.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Taniya Shaffer</h5>
+                      <p class="card-text">Taniya Shaffer is a 23 year-old
+                        Computer Engineering student who is
+                        taking a job with Bayer. She intends to
+                        work on Avionics in the aerospace
+                        industry and someday become an
+                        astronaut.</p>
+                      <a href="https://www.linkedin.com/in/shaffertaniya/" class="btn btn-primary">Contact</a>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
