Fix nav bar & footer

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                    <a class="nav-link active" aria-current="page" href="#desc">About</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Documents</a>
+                    <a class="nav-link" href="#docs">Documents</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Team</a>
+                    <a class="nav-link" href="#us">Team</a>
                     </li>
                 </ul>
                 <span class="nav-item">
@@ -63,7 +63,7 @@
     </div>
 
     <!-- doc caro -->
-    <div class="gray-bg">
+    <div class="gray-bg" id="docs">
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="title">DOCUMENTS</h2>
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <div class="gray-bg">
+    <div class="gray-bg" id="us">
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="title">The Team</h2>
@@ -161,7 +161,7 @@
                         development. He aspires to surpass
                         Elon Musk as the richest man in the
                         world.</p>
-                      <a href="#" class="btn btn-primary">Contact</a>
+                      <a href="https://www.linkedin.com/in/nathaniel-kissoon-15296b259" class="btn btn-primary">Contact</a>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
@@ -207,7 +207,9 @@
     </div>
 
     <!-- footer -->
-    <div id="footer"></div>
+    <div id="footer">
+        &copy; <span id="c_year">2022</span> Holomon, Inc.
+    </div>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
