--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active car-img">
@@ -97,6 +100,30 @@
                       <h5>Final Documentation</h5>
                       <p>Holomon's final documentation.</p>
                       <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/SD2_HoloMon_Report-1.pdf')">Download</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item car-img">
+                    <img src="./assets/background.jpeg" class="d-block w-100 overlay" alt="...">
+                    <div class="carousel-caption">
+                      <h5>Divide and Conquer Document</h5>
+                      <p>Initial Documentation.</p>
+                      <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/Divide.pdf')">Download</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item car-img">
+                    <img src="./assets/background.jpeg" class="d-block w-100 overlay" alt="...">
+                    <div class="carousel-caption">
+                      <h5>CDR Slides</h5>
+                      <p>CDR Slides for presentation.</p>
+                      <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/prez.pdf')">Download</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item car-img">
+                    <img src="./assets/background.jpeg" class="d-block w-100 overlay" alt="...">
+                    <div class="carousel-caption">
+                      <h5>Final Slides</h5>
+                      <p>Holomon's final presentation.</p>
+                      <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/prez.pdf')">Download</button>
                     </div>
                   </div>
                 </div>
