fix card images

--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
             <div class="title-wrapper">
                 <h2 class="title">The Team</h2>
             </div>
-            <div class="card-container">
-                <div class="card" style="width: 18rem;">
+            <div class="row">
+              <div class="col-lg-3">
+                <div class="card">
                     <img src="assets/nathan.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Nathaniel Kissoon</h5>
@@ -191,44 +192,52 @@
                       <a href="https://www.linkedin.com/in/nathaniel-kissoon-15296b259" class="btn btn-primary">Contact</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="assets/liz.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Elizabeth Mikulas</h5>
-                      <p class="card-text">Elizabeth Mikulas is a 23 year-old
-                        Electrical Engineering student who is
-                        taking on a job with L3Harris. She
-                        loves working with anything
-                        electronics and power.</p>
-                        <br/>
-                      <a href="https://www.linkedin.com/in/elizabeth-mikulas-5139791aa/" class="btn btn-primary">Contact</a>
-                    </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="card">
+                  <img src="assets/liz.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Elizabeth Mikulas</h5>
+                    <p class="card-text">Elizabeth Mikulas is a 23 year-old
+                      Electrical Engineering student who is
+                      taking on a job with L3Harris. She
+                      loves working with anything
+                      electronics and power.</p>
+                      <br/>
+                    <a href="https://www.linkedin.com/in/elizabeth-mikulas-5139791aa/" class="btn btn-primary">Contact</a>
                   </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="assets/DiegoLinkedIn-08.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Diego Rodrigues</h5>
-                      <p class="card-text">Diego Rodrigues is a 26 year-old
-                        Computer Engineering student who is
-                        taking on a job with Microsoft. He
-                        aspires to be an inch taller.</p>
-                        <br/>
-                      <a href="https://www.linkedin.com/in/rodrigues-diego/" class="btn btn-primary">Contact</a>
-                    </div>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="card">
+                  <img src="assets/DiegoLinkedIn-08.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Diego Rodrigues</h5>
+                    <p class="card-text">Diego Rodrigues is a 26 year-old
+                      Computer Engineering student who is
+                      taking on a job with Microsoft. He
+                      aspires to be an inch taller.</p>
+                      <br/>
+                      <br/>
+                    <a href="https://www.linkedin.com/in/rodrigues-diego/" class="btn btn-primary">Contact</a>
                   </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="assets/taniya.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Taniya Shaffer</h5>
-                      <p class="card-text">Taniya Shaffer is a 23 year-old
-                        Computer Engineering student who is
-                        taking a job with Bayer. She intends to
-                        work on Avionics in the aerospace
-                        industry and someday become an
-                        astronaut.</p>
-                      <a href="https://www.linkedin.com/in/shaffertaniya/" class="btn btn-primary">Contact</a>
-                    </div>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="card">
+                  <img src="assets/taniya.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Taniya Shaffer</h5>
+                    <p class="card-text">Taniya Shaffer is a 23 year-old
+                      Computer Engineering student who is
+                      taking a job with Bayer. She intends to
+                      work on Avionics in the aerospace
+                      industry and someday become an
+                      astronaut.</p>
+                    <a href="https://www.linkedin.com/in/shaffertaniya/" class="btn btn-primary">Contact</a>
                   </div>
+                </div>
+              </div>
             </div>
         </div>
     </div>
