Change name of doc

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                   <div class="carousel-item active car-img">
                     <img src="./assets/sd1-paper.png" class="d-block w-100 overlay" alt="...">
                     <div class="carousel-caption">
-                      <h5>EEL 4914 Documentation</h5>
-                      <p>The initial documentation for Holomon.</p>
+                      <h5>SD1 Final Paper</h5>
+                      <p>The final documentation for SD1.</p>
                       <button type="submit" class="btn btn-primary btn-lg" onclick="window.open('docs/SD1-HoloMon-Report.pdf')">Download</button>
                     </div>
                   </div>
